objects/User.object
<CustomObject>
    <fields>
        <fullName>Can_Reassign_Cases__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Reassign Cases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cannot_reassign_to_users__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Cannot reassign to users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel_type__c</fullName>
        <formula>if(isblank(ContactId),&quot;Internal&quot;, Contact.Account.Channel_type__c +&apos;;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_team_persona__c</fullName>
        <label>Primary team (persona)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_center_ID__c</fullName>
        <formula>Contact.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test center ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Testing_Center_Name__c</fullName>
        <formula>Contact.Account.Name</formula>
        <label>Testing Center Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Testing_Center__c</fullName>
        <formula>Contact.Account.VTS_Test_Center_ID__c</formula>
        <label>Testing Center</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VSS_Team_Member__c</fullName>
        <formula>CONTAINS( Primary_team_persona__c, &apos;VSS&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VSS Team Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VTS_Agent_ID__c</fullName>
        <description>This field is completed as part of the user provisioning process.  It is the unique identifier from VTS.  It is saved on both the contact and user record.  It is also passed when a hold is pushed from salesforce</description>
        <externalId>true</externalId>
        <label>VTS Agent ID</label>
        <length>21</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copado__API_URL__c</fullName>
        <formula>$Api.Partner_Server_URL_290</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Hide_Copado_feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The visibility of the message asking users to rate &amp; feedback Copado on the AppExchange is controlled here.</inlineHelpText>
        <label>Hide Copado feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>km_team__c</fullName>
        <label>KM Team</label>
        <relationshipName>Users</relationshipName>
        <restrictedAdminField>true</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>New_G2_users_created_3_257_15</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_BY_NAME</field>
            <operation>equals</operation>
            <value>David Gunn</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>3/27/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>New G2 users created 3/257/15</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>